[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "=1.10.31"
solana-program = "=1.10.31"
solana-sdk = "=1.10.31"
att-state-pda-design = {path = "../program", features = ["no-entrypoint"]}
solitaire = {git = "https://github.com/wormhole-foundation/wormhole", rev = "v2.8.9"}
log = "0.4.17"
env_logger = "0.9"
